# hackathon-project-A

Hackthon-project-main/: API_KEYS_REFERENCE.md  CHATBOT_PRIORITY.md  COLOR_THEME_OPTIONS.md  PROFESSIONAL_UI_TRANSFORMATION.md  RAILWAY_BUILD_FIX.md  RAILWAY_DEBUG.md  RAILWAY_DEPLOYMENT_FIXES.md  RAILWAY_SETUP_CHECKLIST.md  START_HERE.md  THEME_TRANSFORMATION_SUMMARY.md  UI_TRANSFORMATION_SUMMARY.md
Hackthon-project-main/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs
Hackthon-project-main/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json
Hackthon-project-main/.docusaurus/docusaurus-plugin-debug/default/p/: docusaurus-debug-content-0d5.json
Hackthon-project-main/backend/: .gitignore  pyproject.toml  railway.env.template  railway.json
Hackthon-project-main/backend/app/: auth.py  main.py
Hackthon-project-main/backend/app/api/: auth.py  chat.py
Hackthon-project-main/backend/app/database/: db.py
Hackthon-project-main/backend/app/services/: user_service.py
Hackthon-project-main/history/prompts/general/: 001-fix-chatbot-auth.debug.prompt.md
Hackthon-project-main/src/components/: Root.tsx
Hackthon-project-main/src/components/Auth/: AuthButton.tsx
Hackthon-project-main/src/components/HeroSection/: styles.module.css
Hackthon-project-main/src/components/HomepageFeatures/: Home.tsx
Hackthon-project-main/src/css/: chatkit-custom.css  custom.css
Hackthon-project-main/src/pages/: index.module.css
Hackthon-project-main/src/services/: authService.ts
Hackthon-project-main/static/: config.js
